add auto-gen client by swagger and a test
