# handlers/put.go
@@ -5,7 +5,7 @@ import (
 	"net/http"
 )
 
-// swagger:route PUT /products/{id} products updateProduct
+// swagger:route PUT /products products updateProduct
 // Replaces one product
 // responses:
 //  201: noContentResponse
